# ChainRepAI

./: .env.example  Cargo.toml  LICENSE  README.md  diesel.toml
example_reports/: adinross.md  andrewtate.md  bugha.md  frankdegods.md  orangie.md
migrations/2025-01-31-203557_add_wallet_report_table/: down.sql  up.sql
migrations/2025-02-02-203529_add_wallet_addr_to_wallet_report_table/: down.sql  up.sql
migrations/2025-02-02-214137_create_wallet_metrics_table/: down.sql  up.sql
migrations/2025-02-03-201704_add_users_table/: up.sql
migrations/2025-02-07-195621_add_known_discredited_wallets/: down.sql  up.sql
migrations/2025-02-08-130622_add_known_credited_wallets_table/: down.sql  up.sql
src/: lib.rs  main.rs
src/case_report/: case_report.rs  mod.rs
src/database/: models.rs  postgres.rs  schema.rs
src/jobs/: async_jobs.rs  jobs.rs  mod.rs  sync_jobs.rs
src/openai_client/: mod.rs  openai_client.rs  types.rs
src/pulsar/: pulsar.rs
src/reputation/: associates.rs  indicators.rs  mod.rs  reputation.rs
src/solana_client/: mod.rs  solana_client.rs
src/wallet/: wallet.rs
src/worker/: worker.rs
