[package]
name = "SolAnalystAI"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
chrono = "0.4.39"
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.137"
solana-client = "2.1.10"
solana-sdk = "2.1.11"
solana-transaction-status = "2.1.11"
tokio = "1.43.0"
diesel = { version = "2.2.5", features = ["postgres", "uuid", "chrono", "serde_json"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
pulsar = "6.3.0"
futures = "0.3.31"
rayon = "1.10.0"
